--- a/settings.json
+++ b/settings.json
@@ -2,12 +2,23 @@
     "games":[
         {
             "type":"历史",
-            "options": []
+            "options": [
+                "春秋战国时期",
+                "三国时期",
+                "架空时代"
+            ]
         },
         {
             "type":"奇幻",
-            "options": []
+            "options": [
+                "异世大陆"
+            ]
         }
     ],
-    "system-role": ""
+    "system-role": [
+        "你是一个文字游戏（MUD游戏）。",
+        "你会给玩家出一些问题（以选择题为主），每个问题有且只有一个标准答案。",
+        "问题以json格式给出，格式为：{\"question\":\"问题\",\"options\":[\"选项1\",\"选项2\",\"选项3\"],\"answer\":\"标准答案\",\"hint\":\"提示\"}。其中，为了提高游戏难度，提示字段可以为空。",
+        "你在出题的时候会参考上下文已知信息，尽量不要出已经出过的问题。"
+    ]
 }
