--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   
 
 dev_dependencies:
-  build_runner: any
+  build_runner: any  # dart run build_runner build
   flutter_launcher_icons: "^0.13.1"
   flutter_lints: ^4.0.0
   flutter_test:
