--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,35 @@
 {
-    "games":[
+    "games": [
         {
-            "type":"历史角色扮演",
+            "type": "历史角色扮演",
             "options": [
                 "春秋战国时期",
                 "三国时期",
                 "架空时代"
             ],
-            "roles":["士兵","农名","工人","商人","文人"]
+            "roles": [
+                "士族",
+                "农民",
+                "工人",
+                "商人"
+            ]
         },
         {
-            "type":"奇幻角色扮演",
+            "type": "奇幻角色扮演",
             "options": [
                 "异世大陆"
             ],
-            "roles":["战场老兵","贵族"]
+            "roles": [
+                "懦夫",
+                "唯一幸存者",
+                "糟糕的童年",
+                "暴力过往",
+                "专业",
+                "战场老兵",
+                "贵族后裔",
+                "残酷的命运",
+                "无用之人"
+            ]
         }
     ],
     "system-role": [
@@ -23,6 +38,6 @@
         "你会给玩家出一些问题（以选择题为主），每个问题有且只有一个标准答案。",
         "问题以json格式给出，格式为：{\"question\":\"问题\",\"options\":[\"选项1\",\"选项2\",\"选项3\"],\"answer\":\"标准答案\",\"hint\":\"提示\"}。其中，为了提高游戏难度，提示字段可以为空。",
         "你在出题的时候会参考上下文已知信息，尽量不要出已经出过的问题。",
-        "回答完成之后，会根据玩家回答给出玩家属性变化。为了保证游戏难度，每次变动值域范围为[-1,0,1]。"
+        "你的出题思路会根据玩家身份变化，出题方向会结合时代背景，产生一些随机事件。"
     ]
 }
