--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,3 +42,21 @@ flutter:
   assets:
     - assets/audios/
     - assets/images/
+
+flutter_launcher_icons:   # flutter pub run flutter_launcher_icons
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.jpeg"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/icon.jpeg"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/icon.jpeg"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/icon.jpeg"
