--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
-  isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
+  isar: 
+    version: 3.1.7
+    hosted: https://pub.isar-community.dev/
+  isar_flutter_libs: 
+    version: 3.1.7
+    hosted: https://pub.isar-community.dev/
   json_annotation: ^4.9.0
   langchain_lib:
     git:
@@ -31,10 +35,11 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  isar_generator: 3.1.0+1
+  isar_generator: 
+    version: 3.1.7
+    hosted: https://pub.isar-community.dev/
   json_serializable: ^6.8.0
   package_rename: ^1.6.0   # dart run package_rename
-  
 
 flutter:
   uses-material-design: true
