feat: bump to 0.1.1

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: ai_mud
 description: "a mud game built with flutter and LLM"
 publish_to: 'none' 
 
-version: 0.1.0
+version: 0.1.1
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -27,6 +27,7 @@ dependencies:
       url: https://github.com/guchengxi1994/langchain_lib
   markdown_widget: ^2.3.2+6
   riverpod: ^2.5.1
+  showcaseview: ^3.0.0
   toastification: ^2.1.0
   window_manager: ^0.3.9
   
