--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,10 @@ environment:
 
 dependencies:
   audioplayers: ^6.0.0
+  auto_size_text: ^3.0.0
   blur: ^4.0.0
   cupertino_icons: ^1.0.6
+  dropdown_button2: ^2.3.9
   flutter:
     sdk: flutter
   flutter_radar_chart: ^0.2.1
