--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Build android
         run: |
-          flutter build android -v --release
+          flutter build apk 
 
       - name: Set tag name
         run: echo "tag_name=v$(cider version)" >> $env:GITHUB_ENV
