--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -43,7 +43,7 @@ jobs:
           flutter build apk 
 
       - name: Set tag name
-        run: echo "tag_name=v$(cider version)" >> $env:GITHUB_ENV
+        run: echo "tag_name=v$(cider version)" >> $GITHUB_ENV
 
 
       - name: Publish release
