--- a/assets/settings/settings.json
+++ b/assets/settings/settings.json
@@ -12,6 +12,11 @@
                 "农民",
                 "工人",
                 "商人"
+            ],
+            "aims" : [
+                "称霸天下",
+                "破除黑暗",
+                "活着"
             ]
         },
         {
@@ -29,6 +34,10 @@
                 "贵族后裔",
                 "残酷的命运",
                 "无用之人"
+            ],
+            "aims" :[
+                "活着",
+                "找寻生命的意义"
             ]
         }
     ],
