feat: update prompt

--- a/assets/settings/settings.json
+++ b/assets/settings/settings.json
@@ -48,7 +48,6 @@
     "common": [
         "请根据以上内容，随机生成一个事件。随机事件包括以下几个要点：1.事件名称，以四字或者六字短语为主；2.事件内容，150字以内；3.事件可能的选项，一般给两个到四个选项。以json返回，json格式如下: {\"eventname\": \"事件名称\", \"eventcontent\": \"事件内容\", \"eventoptions\": [ { \"content\":\"选项1\", \"result\":\"结果1\" } ,  { \"content\":\"选项2\", \"result\":\"结果2\" },  { \"content\":\"选项3\", \"result\":\"结果3\" },  { \"content\":\"选项4\", \"result\":\"结果4\" }]}, 结果中包含的内容是属性值的变动，以如下结构表示: 属性1_+1;属性2_-1  例如：End_+1;Vit_-1;Att_+1;Str_+1;Dex_+1;Int_+1 ",
         "仅需要给出答案，不需要过程。",
-        "你的出题思路会根据玩家身份变化，出题方向会结合时代背景。",
-        "事件需要考虑玩家年龄，年龄越小，事件越简单；年龄越大，事件越复杂。事件给出的选项也要考虑玩家年龄，不要给出一些年龄无法做到的选项。某些事件需要达到具体年龄才会触发，比如成人一般需要18岁以上，结婚一般需要20岁以上。"
+        "事件需要考虑玩家年龄，确保事件的复杂性和可操作性符合玩家的年龄段。"
     ]
 }
