feat: add splash screen

--- a/assets/settings/settings.json
+++ b/assets/settings/settings.json
@@ -13,9 +13,8 @@
                 "工人",
                 "商人"
             ],
-            "aims" : [
+            "aims": [
                 "称霸天下",
-                "破除黑暗",
                 "活着"
             ]
         },
@@ -35,7 +34,7 @@
                 "残酷的命运",
                 "无用之人"
             ],
-            "aims" :[
+            "aims": [
                 "活着",
                 "找寻生命的意义"
             ]
@@ -49,5 +48,11 @@
         "请根据以上内容，随机生成一个事件。随机事件包括以下几个要点：1.事件名称，以四字或者六字短语为主；2.事件内容，150字以内；3.事件可能的选项，一般给两个到四个选项。以json返回，json格式如下: {\"eventname\": \"事件名称\", \"eventcontent\": \"事件内容\", \"eventoptions\": [ { \"content\":\"选项1\", \"result\":\"结果1\" } ,  { \"content\":\"选项2\", \"result\":\"结果2\" },  { \"content\":\"选项3\", \"result\":\"结果3\" },  { \"content\":\"选项4\", \"result\":\"结果4\" }]}, 结果中包含的内容是属性值的变动，以如下结构表示: 属性1_+1;属性2_-1  例如：End_+1;Vit_-1;Att_+1;Str_+1;Dex_+1;Int_+1 ",
         "仅需要给出答案，不需要过程。",
         "事件需要考虑玩家年龄，确保事件的复杂性和可操作性符合玩家的年龄段。"
-    ]
+    ],
+    "game-settings": {
+        "good-luck": 0.01,
+        "bad-luck": 0.05,
+        "good-luck-message": "天赐良机",
+        "bad-luck-message": "时运不济"
+    }
 }
